--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <img src="assets/img/Logo/logo.jpg" class="mb-5" style="width: 25%;" alt="">
+      <img src="assets/img/logo/logo.jpg" class="mb-5" style="width: 25%;" alt="">
 
       <h1>Ricardo Correia</h1>
       <p>I'm <span class="typed" data-typed-items="Front-End Developer"></span></p>
@@ -80,7 +80,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Front-End Developer</h3>
