--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Morada:</h4>
-                <p>5000-751 Vale de Nogueiras, Vila Real</p>
+                <p>Vila Real</p>
               </div>
 
               <div class="email">
