--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="section-title">
           <h2>Sobre</h2>
           <p>
-            Estou no último ano de licenciatura de Comunicação e Multimédia na universidade de Trás-os-Montes e Alto Douro e a área que quero seguir é Web Developer.
+            Conclui a licenciatura em Comunicação e Multimédia na universidade de Trás-os-Montes e Alto Douro no ano de 2021 e a área que decidi trabalhar é relacionada com o Desenvolvimento Web. Estou preparado para qualquer desafio para evoluir profissionalmente como também a nível pessoal.
           </p>
         </div>
 
