--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="section-title">
           <h2>Sobre</h2>
           <p>
-            Conclui a licenciatura em Comunicação e Multimédia na universidade de Trás-os-Montes e Alto Douro no ano de 2021 e a área que decidi trabalhar é relacionada com o Desenvolvimento Web. Estou preparado para qualquer desafio para evoluir profissionalmente como também a nível pessoal.
+            Licenciei-me em Comunicação e Multimédia na Universidade de Trás-os-Montes e Alto Douro no ano de 2021 e sou Web Developer. Estou preparado para qualquer desafio para evoluir profissionalmente como também pessoalmente.
           </p>
         </div>
 
